Add Day2 Method Shell

--- a/AOC/Y2019.cls
+++ b/AOC/Y2019.cls
@@ -33,5 +33,17 @@ ClassMethod D1P2() As %String
 	quit res
 }
 
+ClassMethod D2P1() As %String
+{
+	do ##class(AOC.Y2019).GetInput(1,.out)
+	
+	set res=""
+	set pos=$o(out(""),1,l)
+	while pos'="" {
+		set res=res+l
+		set pos=$o(out(pos),1,l)
+	}
+	quit res
+}
 
 }
