--- a/AOC/Y2019.cls
+++ b/AOC/Y2019.cls
@@ -137,4 +137,143 @@ ClassMethod D2P2(out="") As %String
 	quit instructions(0)
 }
 
+ClassMethod D3P1(out) As %String
+{
+	do:'$d(out) ##class(AOC.Y2019).GetInput(3,.out)
+	
+	set res=""
+	set pos=$o(out(""),1,l)
+	
+	set x=0
+	set y=0
+	set count=0
+	set grid1(x,y)=1
+	for i=0:1:$length(l,",")-1 {
+		set dir=$e($p(l,",",i+1),1)
+		set num=$e($p(l,",",i+1),2,*)
+		for j=1:1:num {
+			if dir="R" {
+				set x=x+1
+			} elseif dir="L" {
+				set x=x-1
+			} elseif dir="U" {
+				set y=y+1
+			} elseif dir="D" {
+				set y=y-1
+			}
+			set grid1(x,y)=1
+		}
+	}
+	
+	set pos=$o(out(pos),1,l)
+	set x=0
+	set y=0
+	set grid2(x,y)=1
+	for i=0:1:$length(l,",")-1 {
+		set dir=$e($p(l,",",i+1),1)
+		set num=$e($p(l,",",i+1),2,*)
+		for j=1:1:num {
+			if dir="R" {
+				set x=x+1
+			} elseif dir="L" {
+				set x=x-1
+			} elseif dir="U" {
+				set y=y+1
+			} elseif dir="D" {
+				set y=y-1
+			}
+			set grid2(x,y)=1
+		}
+	}
+	
+	set maxdistance=999999
+	
+	set g1x=$order(grid1(""))
+	while g1x'="" {
+		set g1y=$order(grid1(g1x,""))
+		while g1y'="" {
+			if $d(grid1(g1x,g1y))&&$d(grid2(g1x,g1y)) {
+				set temp=$zabs(g1x)+$zabs(g1y)
+				if temp<maxdistance {
+					set:temp'=0 maxdistance=temp
+				}
+			}
+			set g1y=$order(grid1(g1x,g1y))
+		}
+		set g1x=$order(grid1(g1x))
+	}
+	
+	quit maxdistance
+}
+
+ClassMethod D3P2(out) As %String
+{
+	do:'$d(out) ##class(AOC.Y2019).GetInput(3,.out)
+	
+	set res=""
+	set pos=$o(out(""),1,l)
+	
+	set x=0
+	set y=0
+	set count=0
+	set grid1(x,y)=1
+	for i=0:1:$length(l,",")-1 {
+		set dir=$e($p(l,",",i+1),1)
+		set num=$e($p(l,",",i+1),2,*)
+		for j=1:1:num {
+			if dir="R" {
+				set x=x+1
+			} elseif dir="L" {
+				set x=x-1
+			} elseif dir="U" {
+				set y=y+1
+			} elseif dir="D" {
+				set y=y-1
+			}
+			set grid1(x,y)=$i(count)
+		}
+	}
+	
+	set pos=$o(out(pos),1,l)
+	set x=0
+	set y=0
+	set count=0
+	set grid2(x,y)=1
+	for i=0:1:$length(l,",")-1 {
+		set dir=$e($p(l,",",i+1),1)
+		set num=$e($p(l,",",i+1),2,*)
+		for j=1:1:num {
+			if dir="R" {
+				set x=x+1
+			} elseif dir="L" {
+				set x=x-1
+			} elseif dir="U" {
+				set y=y+1
+			} elseif dir="D" {
+				set y=y-1
+			}
+			set grid2(x,y)=$i(count)
+		}
+	}
+	
+	set maxsteps=999999999
+	
+	set g1x=$order(grid1(""))
+	while g1x'="" {
+		set g1y=$order(grid1(g1x,""))
+		while g1y'="" {
+			if $d(grid1(g1x,g1y))&&$d(grid2(g1x,g1y)) {
+				set temp=grid1(g1x,g1y)+grid2(g1x,g1y)
+				if temp<maxsteps {
+					set:temp'=2 maxsteps=temp
+				}
+			}
+			set g1y=$order(grid1(g1x,g1y))
+		}
+		set g1x=$order(grid1(g1x))
+	}
+	
+	quit maxsteps
+}
+
 }
