--- a/AOC/Y2019.cls
+++ b/AOC/Y2019.cls
@@ -509,6 +509,82 @@ ClassMethod D5P2(input="") As %String
 	quit instructions(0)
 }
 
+ClassMethod D6P1(input) As %String
+{
+	do:'$d(input) ##class(AOC.Y2019).GetInput(6,.input)
+	
+	set res=""
+	set pos=$o(input(""),1,l)
+	while pos'="" {
+		do ##class(AOC.Y2019).ParseString(l,")",.a,.b)
+		
+		set orbits(b)=a
+		set planets(a)=$i(planets(a))
+		set planets(b)=$i(planets(b))
+		
+		set pos=$o(input(pos),1,l)
+	}
+	
+	set planet=$o(planets(""))
+	while planet'="" {
+		set parent=$g(orbits(planet))
+		while parent'="" {
+			set res=$i(res)
+			set parent=$g(orbits(parent))
+		}
+		set planet=$o(planets(planet))
+	}
+	
+	quit res
+}
+
+
+ClassMethod D6P2(input) As %String
+{
+	do:'$d(input) ##class(AOC.Y2019).GetInput(6,.input)
+	
+	set res=""
+	set pos=$o(input(""),1,l)
+	while pos'="" {
+		do ##class(AOC.Y2019).ParseString(l,")",.a,.b)
+		
+		set orbits(b)=a
+		set planets(a)=$i(planets(a))
+		set planets(b)=$i(planets(b))
+		
+		set pos=$o(input(pos),1,l)
+	}
+	
+	set planet=$o(planets(""))
+	while planet'="" {
+		set planetcount=0
+		set parent=$g(orbits(planet))
+		set planetpath=planet
+		while parent'="" {
+			set res=$i(res)
+			set planetcount=$i(planetcount)
+			set planetpath=parent_","_planetpath
+			set parent=$g(orbits(parent))
+		}
+		set planetpath(planet)=planetpath
+		set planetcount(planet)=planetcount
+		set planet=$o(planets(planet))
+	}
+	
+	set youpath=$lfs(planetpath("YOU"))
+	set sanpath=$lfs(planetpath("SAN"))
+	
+	for i=1:1:$length(youpath) {
+		if (($lg(youpath,i))=$lg(sanpath,i)) && ($lg(youpath,i)'="") {
+			set commonparent=$lg(youpath,i)
+		} else {
+			quit
+		}
+	}
+	
+	quit (planetcount("YOU")-planetcount(commonparent))+(planetcount("SAN")-planetcount(commonparent))-2
+}
+
 ClassMethod DXP1(input) As %String
 {
 	do:'$d(input) ##class(AOC.Y2019).GetInput(X,.input)
