--- a/AOC/Y2019.cls
+++ b/AOC/Y2019.cls
@@ -1740,6 +1740,178 @@ ClassMethod D11P2(input="",debug=0) As %String
 	quit ""
 }
 
+ClassMethod D12P1(input,debug=0) As %String
+{
+	do:'$d(input) ##class(AOC.Y2019).GetInput(12,.input)
+	
+	set res=""
+	set pos=$o(input(""),1,l)
+	while pos'="" {
+		do ##class(AOC.Y2019).ParseString(l,",",.x,.y,.z)
+		set x=$piece(x,"=",2)
+		set y=$piece(y,"=",2)
+		set z=$piece($e(z,1,*-1),"=",2)
+		set planets($i(planets))=$lb(x,y,z)
+		
+		set pos=$o(input(pos),1,l)
+	}
+	
+	for step=1:1:1000 {
+		// apply gravity
+		for i=1:1:planets {
+			for j=i+1:1:planets {
+				set planetA=planets(i)
+				set planetB=planets(j)
+				for k=1:1:3 {
+					//zw velocity
+					set tempA=$lg($g(velocity(i)),k)
+					set tempB=$lg($g(velocity(j)),k)
+					if $lg(planetA,k)>$lg(planetB,k) {
+						set $list(velocity(i),k)=$lg($g(velocity(i)),k)-1
+						set $list(velocity(j),k)=$lg($g(velocity(j)),k)+1
+					} elseif $lg(planetA,k)<$lg(planetB,k) {
+						set $list(velocity(i),k)=$lg($g(velocity(i)),k)+1
+						set $list(velocity(j),k)=$lg($g(velocity(j)),k)-1
+					}
+				}
+			}
+		}
+		
+		// apply velocity
+		for i=1:1:planets {
+			for j=1:1:3 {
+				set $list(planets(i),j)=$lg(planets(i),j)+$lg(velocity(i),j)
+			}
+		}
+		zw:debug planets
+		zw:debug velocity
+	}
+	
+	for i=1:1:planets {
+		set tempPot=$zabs($lg(planets(i),1))+$zabs($lg(planets(i),2))+$zabs($lg(planets(i),3))
+		set tempKin=$zabs($lg(velocity(i),1))+$zabs($lg(velocity(i),2))+$zabs($lg(velocity(i),3))
+		set res=res+(tempPot*tempKin)
+	}
+	
+	quit res
+}
+
+ClassMethod D12P2(input,debug=0) As %String
+{
+	do:'$d(input) ##class(AOC.Y2019).GetInput(12,.input)
+	
+	set res=""
+	set pos=$o(input(""),1,l)
+	while pos'="" {
+		do ##class(AOC.Y2019).ParseString(l,",",.x,.y,.z)
+		set x=$piece(x,"=",2)
+		set y=$piece(y,"=",2)
+		set z=$piece($e(z,1,*-1),"=",2)
+		set planets($i(planets))=$lb(x,y,z)
+		
+		set pos=$o(input(pos),1,l)
+	}
+	
+	merge initial=planets
+	set done=0
+	set xRepeat=0
+	set yRepeat=0
+	set zRepeat=0
+	
+	while 'done {
+		// apply gravity
+		for i=1:1:planets {
+			for j=i+1:1:planets {
+				set planetA=planets(i)
+				set planetB=planets(j)
+				for k=1:1:3 {
+					set tempA=$lg($g(velocity(i)),k)
+					set tempB=$lg($g(velocity(j)),k)
+					if $lg(planetA,k)>$lg(planetB,k) {
+						set $list(velocity(i),k)=$lg($g(velocity(i)),k)-1
+						set $list(velocity(j),k)=$lg($g(velocity(j)),k)+1
+					} elseif $lg(planetA,k)<$lg(planetB,k) {
+						set $list(velocity(i),k)=$lg($g(velocity(i)),k)+1
+						set $list(velocity(j),k)=$lg($g(velocity(j)),k)-1
+					}
+				}
+			}
+		}
+		
+		// apply velocity
+		for i=1:1:planets {
+			for j=1:1:3 {
+				set $list(planets(i),j)=$lg(planets(i),j)+$lg(velocity(i),j)
+			}
+		}
+		set res=$i(res)
+		set xOK=1
+		set yOK=1
+		set zOK=1
+		for i=1:1:planets {
+			for j=1:1:3 {
+				if $lg(planets(i),j)'=$lg(initial(i),j) {
+					set:j=1 xOK=0
+					set:j=2 yOK=0
+					set:j=3 zOK=0
+				}
+				if $lg(velocity(i),j)'=0 {
+					set:j=1 xOK=0
+					set:j=2 yOK=0
+					set:j=3 zOK=0
+				}
+			}
+		}
+		if xOK&&(xRepeat=0) {
+			set xRepeat=res
+			zw:debug xRepeat
+		}
+		if yOK&&(yRepeat=0) {
+			set yRepeat=res
+			zw:debug yRepeat
+		}
+		if zOK&&(zRepeat=0) {
+			set zRepeat=res
+			zw:debug zRepeat
+		}
+		if xRepeat&&yRepeat&&zRepeat {
+			set res=0
+			set max=0
+			if ((xRepeat>yRepeat)&&(xRepeat>zRepeat)) {
+				set max=xRepeat
+			} elseif ((yRepeat>zRepeat)&&(yRepeat>xRepeat)) {
+				set max=yRepeat
+			} else {
+				set max=zRepeat
+			}
+			for i=2:1:max {
+				if (((xRepeat/i)=(xRepeat\i))||((yRepeat/i)=(yRepeat\i))||((zRepeat/i)=(zRepeat\i))) {
+					zw:debug i
+					set:(xRepeat/i)=(xRepeat\i) xRepeat=xRepeat/i
+					zw:debug xRepeat
+					set:(yRepeat/i)=(yRepeat\i) yRepeat=yRepeat/i
+					zw:debug yRepeat
+					set:(zRepeat/i)=(zRepeat\i) zRepeat=zRepeat/i
+					zw:debug zRepeat
+					set factors($i(factors))=i
+					set i=1
+				}
+			}
+			
+			zw:debug factors
+			
+			set res=1
+			for i=1:1:factors {
+				set res=res*factors(i)
+			}
+			
+			set done=1
+		}
+	}
+	
+	quit res
+}
+
 ClassMethod DXP1(input,debug=0) As %String
 {
 	do:'$d(input) ##class(AOC.Y2019).GetInput(X,.input)
